# Geneticxx

./: CMakeLists.txt  README.md
Core/: Calculator.ixx  CrossoverSchema.ixx  Dispatcher.ixx  Evaluation.ixx  GeneticAlgorithm.ixx  Genome.ixx  Genome1D.ixx  GenomeTree.ixx  History.ixx  Individual.ixx  InitializationSchema.ixx  MutationSchema.ixx  Observers.ixx  Phenome1D.ixx  Phenotype.ixx  Population.ixx  Publishers.ixx  RandomIntFromRange.ixx  RandomRealFromRange.ixx  ReplacementSchema.ixx  ScalingSchema.ixx  SelectionSchema.ixx  Statistics.ixx  StoppingCriterionSchema.ixx  Visualization.ixx
Examples/: CMakeLists.txt  Knapsack.ixx  LinearModelOptimization.ixx  TravellingSalesman.ixx
Implementations/Crossovers/: CrossoverGaussian.cppm  CrossoverGaussian.ixx  CrossoverOrder.ixx  CrossoverSinglePoint.cppm  CrossoverSinglePoint.ixx  CrossoverUniform.cppm  CrossoverUniform.ixx
Implementations/Dispatchers/: DispatcherMultiThreaded.cppm  DispatcherMultiThreaded.ixx  DispatcherNoDispatch.cppm  DispatcherNoDispatch.ixx
Implementations/Evaluations/: EvaluationKnapsack.cppm  EvaluationKnapsack.ixx  EvaluationTravellingSalesman.cppm  EvaluationTravellingSalesman.ixx
Implementations/GeneticAlgorithms/: GeneticAlgorithmSimple.cppm  GeneticAlgorithmSimple.ixx
Implementations/Genomes/: GenomeBitVector.cppm  GenomeBitVector.ixx  GenomeIntVector.ixx  GenomeSimpleTree.ixx
Implementations/Individuals/: IndividualSimple.cppm  IndividualSimple.ixx
Implementations/Initializers/: InitializeNoInit.cppm  InitializeNoInit.ixx  InitializeWithCopies.cppm  InitializeWithCopies.ixx
Implementations/Mutators/: Mutator1DPointBitFlip.cppm  Mutator1DPointBitFlip.ixx  Mutator1DRandomValueAddition.ixx  MutatorMultiplicative.ixx  MutatorPointReplacement.cppm  MutatorPointReplacement.ixx  MutatorRandomSwap.cppm  MutatorRandomSwap.ixx  MutatorReplacement.cppm  MutatorReplacement.ixx
Implementations/Observers/: HistoryBasic.cppm  HistoryBasic.ixx
Implementations/Phenomes/: Phenome1DNoTranslation.ixx  PhenomeBoolToDouble.cppm  PhenomeBoolToDouble.ixx  PhenomeIntVector.cppm  PhenomeIntVector.ixx
Implementations/Populations/: PopulationMigratory.cppm  PopulationMigratory.ixx  PopulationSimple.cppm  PopulationSimple.ixx
Implementations/Publishers/: PublisherPopulation.cppm  PublisherPopulation.ixx
Implementations/RandomNumbersGenerators/: DefaultUniformIntRandomGenerator.cppm  DefaultUniformIntRandomGenerator.ixx  DefaultUniformRealRandomGenerator.cppm  DefaultUniformRealRandomGenerator.ixx
Implementations/Replacements/: ReplacementBest.cppm  ReplacementBest.ixx  ReplacementElitist.cppm  ReplacementElitist.ixx  ReplacementFull.cppm  ReplacementFull.ixx
Implementations/Scalings/: ScalingInverse.cppm  ScalingInverse.ixx  ScalingWithout.cppm  ScalingWithout.ixx
Implementations/Selectors/: SelectorRoulette.cppm  SelectorRoulette.ixx  SelectorTournament.cppm  SelectorTournament.ixx
Implementations/Statistics/: StatisticsBasic.cppm  StatisticsBasic.ixx
Implementations/StoppingCriteria/: StoppingCriterionMaxGenerations.cppm
Tests/: CMakeLists.txt  test_main.cpp
Tests/Crossovers/: CrossoverSinglePoint_test.cpp
Tests/Evaluations/: EvaluationTravellingSalesman_test.cpp
Tests/Individuals/: IndividualSimple_test.cpp
Tests/Observers/: HistoryBasic_test.cpp
Tests/Publishers/: PublisherPopulation_test.cpp
Tests/Replacements/: ReplacementFull_test.cpp
Tests/Selectors/: SelectorRoulette_test.cpp
Tests/StoppingCriteria/: StoppingCriterionMaxGenerations_test.cpp
